@@ -2,9 +2,11 @@ package jaeik.bimillog.domain.post.async;
 
 import jaeik.bimillog.domain.post.entity.PostSimpleDetail;
 import jaeik.bimillog.domain.post.repository.PostQueryRepository;
+import jaeik.bimillog.infrastructure.redis.RedisKey;
 import jaeik.bimillog.infrastructure.redis.post.RedisFirstPagePostAdapter;
+import jaeik.bimillog.infrastructure.redis.post.RedisPostHashAdapter;
+import jaeik.bimillog.infrastructure.redis.post.RedisPostIndexAdapter;
 import jaeik.bimillog.infrastructure.redis.post.RedisRealTimePostAdapter;
-import jaeik.bimillog.infrastructure.redis.post.RedisSimplePostAdapter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.retry.annotation.Recover;
@@ -14,11 +16,11 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 
 /**
- * <h2>첫 페이지 캐시 갱신 실행기</h2>
- * <p>DB에서 첫 페이지 게시글을 조회하여 Redis 캐시를 갱신합니다.</p>
+ * <h2>캐시 갱신 실행기</h2>
+ * <p>글 수정/삭제 시 글 단위 Hash, SET 인덱스, 첫 페이지 캐시를 갱신합니다.</p>
  *
  * @author Jaeik
- * @version 2.7.0
+ * @version 3.0.0
  */
 @Component
 @RequiredArgsConstructor
@@ -26,7 +28,8 @@ import java.util.List;
 public class CacheRefreshExecutor {
     private final PostQueryRepository postQueryRepository;
     private final RedisFirstPagePostAdapter redisFirstPagePostAdapter;
-    private final RedisSimplePostAdapter redisSimplePostAdapter;
+    private final RedisPostHashAdapter redisPostHashAdapter;
+    private final RedisPostIndexAdapter redisPostIndexAdapter;
     private final RedisRealTimePostAdapter redisRealTimePostAdapter;
 
     /**
@@ -38,7 +41,6 @@ public class CacheRefreshExecutor {
      * <h3>비동기 캐시 갱신 (분산 락)</h3>
      * <p>캐시 미스 또는 수정/삭제 시 호출됩니다.</p>
      * <p>분산 락을 획득하여 하나의 인스턴스만 갱신하도록 보장합니다.</p>
-     * <p>갱신 실패 시에도 캐시가 이미 무효화되어 DB 폴백이 동작합니다.</p>
      */
     @Async("cacheRefreshPool")
     public void asyncRefreshWithLock() {
@@ -48,7 +50,6 @@ public class CacheRefreshExecutor {
     /**
      * <h3>비동기 게시글 추가</h3>
      * <p>새 게시글을 첫 페이지 캐시에 비동기로 추가합니다.</p>
-     * <p>실패 시 캐시 무효화되어 다음 조회 시 DB 폴백이 동작합니다.</p>
      */
     @Async("cacheRefreshPool")
     public void asyncAddNewPost(PostSimpleDetail post) {
@@ -57,49 +58,39 @@ public class CacheRefreshExecutor {
 
     /**
      * <h3>비동기 게시글 수정 반영</h3>
-     * <p>인기글 Hash 캐시 무효화 + 첫 페이지 LSET 교체를 비동기로 처리합니다.</p>
-     * <p>공지/주간/레전드 글이면 해당 타입 Hash에 HSET으로 업데이트합니다.</p>
-     * <p>첫 페이지에 없는 글이면 첫 페이지 캐시는 무시됩니다.</p>
+     * <p>글 단위 Hash의 제목을 업데이트하고, 첫 페이지 캐시를 갱신합니다.</p>
      */
     @Async("cacheRefreshPool")
     public void asyncUpdatePost(Long postId, PostSimpleDetail updatedPost) {
-        // featuredType이 있으면 해당 캐시에 HSET으로 업데이트, 나머지 캐시에서는 삭제
-        if (updatedPost.getFeaturedType() != null) {
-            redisSimplePostAdapter.putPostToCache(updatedPost.getFeaturedType(), updatedPost);
-            // 다른 타입의 캐시에서는 삭제 (이전에 다른 타입이었을 수 있으므로)
-            for (var type : jaeik.bimillog.domain.post.entity.jpa.PostCacheFlag.values()) {
-                if (type != updatedPost.getFeaturedType() && type != jaeik.bimillog.domain.post.entity.jpa.PostCacheFlag.REALTIME) {
-                    redisSimplePostAdapter.removePostFromCache(type, postId);
-                }
-            }
-        } else {
-            redisSimplePostAdapter.removePostFromCache(postId);
-        }
+        redisPostHashAdapter.updateTitle(postId, updatedPost.getTitle());
         redisFirstPagePostAdapter.updatePost(postId, updatedPost);
     }
 
     /**
      * <h3>비동기 게시글 삭제 반영</h3>
-     * <p>실시간 ZSet + 인기글 Hash + 첫 페이지 List 캐시를 비동기로 정리합니다.</p>
-     * <p>첫 페이지에 없는 글이면 첫 페이지 캐시는 무시됩니다.</p>
+     * <p>실시간 ZSET + 글 단위 Hash + SET 인덱스(weekly/legend/notice) + 첫 페이지 캐시를 정리합니다.</p>
      */
     @Async("cacheRefreshPool")
     public void asyncDeletePost(Long postId) {
         redisRealTimePostAdapter.removePostIdFromRealtimeScore(postId);
-        redisSimplePostAdapter.removePostFromCache(postId);
+        redisPostHashAdapter.deletePostHash(postId);
+
+        // 모든 SET 인덱스에서 제거
+        redisPostIndexAdapter.removeFromIndex(RedisKey.POST_WEEKLY_IDS_KEY, postId);
+        redisPostIndexAdapter.removeFromIndex(RedisKey.POST_LEGEND_IDS_KEY, postId);
+        redisPostIndexAdapter.removeFromIndex(RedisKey.POST_NOTICE_IDS_KEY, postId);
 
         Long lastPostId = redisFirstPagePostAdapter.deletePost(postId);
         if (lastPostId != null) {
             List<PostSimpleDetail> nextPosts = postQueryRepository.findBoardPostsByCursor(lastPostId, 1);
             if (!nextPosts.isEmpty()) {
-                redisFirstPagePostAdapter.appendPost(nextPosts.get(0));
+                redisFirstPagePostAdapter.appendPost(nextPosts.getFirst());
             }
         }
     }
 
     /**
      * <h3>첫 페이지 캐시 갱신 (분산 락)</h3>
-     * <p>DB에서 최신 20개 게시글을 조회하여 Redis 캐시를 갱신합니다.</p>
      */
     public void refreshFirstPage() {
         List<PostSimpleDetail> posts = postQueryRepository.findBoardPostsByCursor(null, FIRST_PAGE_SIZE);
@@ -112,7 +103,6 @@ public class CacheRefreshExecutor {
 
     /**
      * <h3>캐시 갱신 최종 실패 복구</h3>
-     * <p>재시도 후에도 실패 시 로그를 남기고 종료합니다.</p>
      */
     @Recover
     public void recoverRefreshFirstPage(Exception e) {
